# aloam_gtsam

./: CMakeLists.txt  README.md  package.xml
config/: test_preprocess.yaml
include/SuMa/core/: Frame.h  Frame2Model.h  LieGaussNewton.h  Objective.h  Preprocessing.h  SurfelMap.h  SurfelMapping.h
include/SuMa/io/: KITTIReader.h  SimulationReader.h
include/SuMa/rv/: LaserscanReader.h
include/SuMa/util/: ScanAccumulator.h  parameters.h
include/SuMa/visualizer/: preprocessWorker.h
include/mrs_laser_maps/: grid_cell_with_statistics.h  map_level.h  map_multiresolution.h  map_point_types.h  multiresolution_surfel_registration.h
include/mrs_laser_maps/impl/: map_level.hpp
include/points_segmentation/: projection_params.h  rich_point.h  scan_projection.h
include/points_segmentation/feature_extractor/: depth_ground_remover.h  feature_extractor.h  image_based_clusterer.h
include/points_segmentation/image_labelers/: abstract_image_labeler.h  dijkstra_image_labeler.h  hash_queue.h  linear_image_labeler.h
include/points_segmentation/image_labelers/diff_helpers/: abstract_diff.h  angle_diff.h  diff_factory.h  line_dist_diff.h  simple_diff.h
launch/: aloam_factor_graph_velodyne_HDL_64.launch  aloam_factor_graph_velodyne_VLP_16.launch  aloam_velodyne_HDL_64.launch  aloam_velodyne_VLP_16.launch  kitti_helper.launch
rviz_cfg/: aloam_velodyne.rviz
src/SuMa/: estimate_node.cpp  preprocess_node.cpp
src/SuMa/core/: Frame2Model.cpp  ImagePyramidGenerator.cpp  LieGaussNewton.cpp  Posegraph.cpp  Preprocessing.cpp  SurfelMap.cpp  SurfelMapping.cpp  lie_algebra.cpp
src/SuMa/io/: KITTIReader.cpp  RobocarReader.cpp  SimulationReader.cpp
src/SuMa/opengl/: Mesh.cpp  Model.cpp  ObjReader.cpp
src/SuMa/rv/: CompositeParameter.cpp  FileUtil.cpp  Laserscan.cpp  Math.cpp  Parameter.cpp  ParameterList.cpp  ParameterListIterator.cpp  PrimitiveParameters.cpp  Random.cpp  RangeParameter.cpp  Stopwatch.cpp  XmlDocument.cpp  XmlNode.cpp  string_utils.cpp  transform.cpp  yxml.c
src/SuMa/util/: ScanAccumulator.cpp  kitti_utils.cpp  parameters.cpp  utility.cpp
src/SuMa/visualizer/: preprocessWorker.cpp
src/aloam/: kittiHelper.cpp  laserFactorGraphMapping.cpp  laserFactorGraphOdometry.cpp  laserMapping.cpp  laserOdometry.cpp  lidarFactorGtsam.hpp  scanRegistration.cpp
src/aloam/mrs_laser_maps/: multiresolution_surfel_registration.cpp
src/aloam/mrs_laser_maps/.kdev4/: mrs_laser_maps.kdev4
src/aloam/points_segmentation/: projection_params.cpp  rich_point.cpp  scan_projection.cpp
src/aloam/points_segmentation/feature_extractor/: depth_ground_remover.cpp  feature_extractor.cpp
src/aloam/points_segmentation/image_labelers/: abstract_image_labeler.cpp
src/aloam/points_segmentation/image_labelers/diff_helpers/: angle_diff.cpp  line_dist_diff.cpp
